--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,6 +6,8 @@ name: Go
 on:
   push:
     branches: [ "main" ]
+    tags:
+      - "v*.*.*"
   pull_request:
     branches: [ "main" ]
 
@@ -27,7 +29,9 @@ jobs:
     - name: Build
       run: GOOS=linux GOARCH=arm CGO_ENABLED=0 go build -o tarpn-mon.linux-arm32 -v .
 
-    - uses: actions/upload-artifact@v4
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        name: tarpn-mon
-        path: tarpn-mon.linux-arm32
+        files: |
+          tarpn-mon.linux-arm32
