--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,7 +27,7 @@ jobs:
       run: go test -v ./...
 
     - name: Build
-      run: GOOS=linux GOARCH=arm CGO_ENABLED=0 go build -o tarpn-mon.linux-arm32 -v .
+      run: GOOS=linux GOARCH=arm go build -o tarpn-mon.linux-arm32 -v .
 
     - name: Release
       uses: softprops/action-gh-release@v2
