--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,13 +21,13 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.22.3'
+        go-version: '1.22.5'
 
     - name: Test
       run: go test -v ./...
 
     - name: Build
-      run: GOOS=linux GOARCH=arm go build -o tarpn-mon.linux-arm32 -v .
+      run: GOOS=linux GOARCH=arm go build -ldflags "-X main.Version=${{ github.ref_name }}" -o tarpn-mon.linux-arm32 -v .
 
     - name: Release
       uses: softprops/action-gh-release@v2
