--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,10 +23,25 @@ jobs:
       with:
         go-version: '1.22.5'
 
-    - name: Test
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+
+    - name: Install JS dependencies
+      run: npm ci
+
+    - name: Test JS
+      run: npm test
+
+    - name: Build JS
+      run: npm run build
+
+    - name: Test Go
       run: go test -v ./...
 
-    - name: Build
+    - name: Build Go
       run: GOOS=linux GOARCH=arm go build -ldflags "-X main.Version=${{ github.ref_name }}" -o tarpn-mon.linux-arm32 -v .
 
     - name: Release
