--- a/package.json
+++ b/package.json
@@ -4,19 +4,26 @@
   "description": "Frontend for TARPN Monitor",
   "private": true,
   "scripts": {
+    "test": "jest",
     "build": "webpack --mode production",
     "dev": "webpack --mode development --watch"
   },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
     "@vue/compiler-sfc": "^3.5.16",
+    "babel-jest": "^30.0.0-beta.3",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "vue": "^3.5.16",
     "vue-loader": "^17.4.2",
     "vue-style-loader": "^4.1.3",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1"
-  }
+  },
+  "keywords": []
 }
